Update 01. Grafana on VM.md

--- a/01. Grafana on VM.md
+++ b/01. Grafana on VM.md
@@ -1,4 +1,4 @@
-## - **How to install Grafana from YUM Package ?**
+##  **How to install Grafana from YUM Package? (Red Hat and CentOS Systems)**
 
 ### 
 
