Update 01. Grafana on VM.md

--- a/01. Grafana on VM.md
+++ b/01. Grafana on VM.md
@@ -49,6 +49,7 @@ admin/admin
 
 ### How to add Data Source
 
+![image](https://github.com/user-attachments/assets/d91a7b78-d2fb-4b74-811a-19d4e4a46ec1)
 
 ```
  1. Search for and select the desired data source
